# pipeline-from-reddit

./: README.md
airflow/: docker-compose.yml  dockerfile
airflow/mnt/dags/: dbt_dag.py  reddit_api_dag.py
airflow/reddit/: pyproject.toml
airflow/reddit/reddit/: dbt_project.yml  profiles.yml
airflow/reddit/reddit/models/: model_1.sql  model_2.sql  model_3.sql
